--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,101 +33,74 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_DNS }} >> ~/.ssh/known_hosts
 
-      - name: Test Basic SSH
-        run: |
-          echo "=== Testing basic SSH connection ==="
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "echo '✅ Basic SSH works!'"
-
-      - name: Check EC2 Environment
-        run: |
-          echo "=== Checking EC2 environment ==="
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "
-            echo '1. Current directory:'
-            pwd
-            echo ''
-            echo '2. Home directory contents:'
-            ls -la /home/ec2-user/
-            echo ''
-            echo '3. Java version:'
-            java -version || echo 'Java not found'
-            echo ''
-            echo '4. Check if paquetes directory exists:'
-            ls -la /home/ec2-user/paquetes/ || echo 'Directory does not exist'
-          "
-
-      - name: Create Directory if Needed
-        run: |
-          echo "=== Ensuring directory exists ==="
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "
-            mkdir -p /home/ec2-user/$SERVICE_NAME
-            echo 'Directory created/verified'
-            ls -la /home/ec2-user/$SERVICE_NAME/
-          "
-
       - name: Upload JAR
         run: |
-          echo "=== Uploading JAR file ==="
           scp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no target/*.jar ec2-user@${{ secrets.EC2_DNS }}:/home/ec2-user/$SERVICE_NAME/
-          echo "✅ JAR uploaded successfully"
 
-      - name: Verify JAR on EC2
+      - name: Deploy Application Safely
         run: |
-          echo "=== Verifying JAR on EC2 ==="
+          echo "=== Starting safe deployment ==="
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "
-            cd /home/ec2-user/$SERVICE_NAME
-            echo 'JAR files in directory:'
-            ls -la *.jar || echo 'No JAR files found'
-            echo ''
-            echo 'File size:'
-            du -h *.jar || echo 'Cannot check file size'
-          "
-
-      - name: Deploy Application
-        run: |
-          echo "=== Starting deployment ==="
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "
-            set -x  # Enable debug mode
+            set -x
             
             cd /home/ec2-user/$SERVICE_NAME
             
-            echo '1. Stopping existing Java processes...'
-            pkill -f java || echo 'No Java processes to stop'
-            sleep 3
+            echo '1. Checking current processes on port $SERVICE_PORT...'
+            PORT_PID=\$(lsof -ti:$SERVICE_PORT 2>/dev/null || echo '')
+            if [ ! -z \"\$PORT_PID\" ]; then
+              echo \"Found process \$PORT_PID on port $SERVICE_PORT - stopping it...\"
+              kill -9 \$PORT_PID
+              sleep 3
+            else
+              echo 'No process found on port $SERVICE_PORT'
+            fi
             
-            echo '2. Checking current port usage...'
-            ss -tuln | grep ':$SERVICE_PORT' || echo 'Port $SERVICE_PORT is free'
-            
-            echo '3. Starting application...'
+            echo '2. Starting application...'
             nohup java -jar *.jar --server.port=$SERVICE_PORT --server.address=0.0.0.0 > app.log 2>&1 &
             APP_PID=\$!
             echo \"Application started with PID: \$APP_PID\"
             
-            echo '4. Waiting for startup...'
-            sleep 10
+            echo '3. Waiting for startup...'
+            sleep 15
             
-            echo '5. Checking if process is running...'
-            ps -p \$APP_PID >/dev/null && echo 'Process is running' || echo 'Process died'
+            echo '4. Checking if application is running...'
+            if ps -p \$APP_PID > /dev/null; then
+              echo '✅ Application process is running'
+            else
+              echo '❌ Application process died'
+              echo 'Application logs:'
+              cat app.log
+              exit 1
+            fi
             
-            echo '6. Checking port...'
-            ss -tuln | grep ':$SERVICE_PORT' && echo '✅ Port $SERVICE_PORT is listening' || echo '❌ Port not listening'
-            
-            echo '7. Application logs (last 20 lines):'
-            tail -20 app.log || echo 'No logs available'
+            echo '5. Checking port...'
+            if ss -tuln | grep -q \":$SERVICE_PORT\"; then
+              echo '✅ Port $SERVICE_PORT is listening'
+              echo '🎉 Deployment successful!'
+            else
+              echo '❌ Port $SERVICE_PORT is not listening'
+              echo 'Application logs:'
+              cat app.log
+              exit 1
+            fi
             
             set +x
           "
 
-      - name: Final Check
+      - name: Final Verification
         run: |
-          echo "=== Final deployment check ==="
+          echo "=== Final verification ==="
           ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_DNS }} "
-            echo '--- Final Status ---'
-            echo 'Java processes:'
-            ps aux | grep java | grep -v grep || echo 'No Java processes'
+            echo '--- Deployment Status ---'
+            echo 'Service: $SERVICE_NAME'
+            echo 'Port: $SERVICE_PORT'
             echo ''
-            echo 'Listening ports:'
-            ss -tuln | grep -E ':(8080|8081|8082|8083|8084)' | sort || echo 'No deployment ports'
+            echo 'Processes for $SERVICE_NAME:'
+            ps aux | grep 'java.*$SERVICE_NAME' | grep -v grep || echo 'No specific service processes'
             echo ''
-            echo 'Paquetes service log:'
-            tail -10 /home/ec2-user/paquetes/app.log || echo 'No log file'
+            echo 'Port status:'
+            ss -tuln | grep \":$SERVICE_PORT\" && echo '✅ Port listening' || echo '❌ Port not listening'
+            echo ''
+            echo 'Application logs (last 5 lines):'
+            tail -5 /home/ec2-user/$SERVICE_NAME/app.log || echo 'No logs available'
           "
