--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,6 @@ jobs:
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.PAT_FOR_REPO_DISPATCH }}
-          repository: "diegoOsorioB/infra"
+          repository: "diegoosoriob/infra"
           event-type: "microservice-updated"
           client-payload: '{"service":"paquetes","tag":"${{ github.sha }}"}'
