--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -21,11 +22,11 @@ jobs:
         run: mvn -B clean package -DskipTests
 
       - name: Log in to GHCR
-        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ github.repository_owner }}" --password-stdin
+        run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "diegoosoriob" --password-stdin
 
       - name: Build & Push Docker image
         env:
-          IMAGE: ghcr.io/${{ github.repository_owner }}/paquetes
+          IMAGE: ghcr.io/diegoosoriob/paquetes
           TAG: ${{ github.sha }}
         run: |
           docker build -t $IMAGE:$TAG -t $IMAGE:latest .
