--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-server.port=${SERVER_PORT}
+#server.port=${SERVER_PORT}
 server.address=0.0.0.0
 
 logging.file.name=logs/${spring.application.name}.log
